@@ -3577,8 +3577,8 @@ read_node_local_memattrs(struct hwloc_topology *topology,
                          const char *path)
 {
   char accessdirpath[SYSFS_NUMA_NODE_PATH_LEN];
-  char accesspath[SYSFS_NUMA_NODE_PATH_LEN+15];
-  unsigned rbw = 0, rlat = 0;
+  char accesspath[SYSFS_NUMA_NODE_PATH_LEN+20];
+  unsigned rbw = 0, wbw = 0, rlat = 0, wlat = 0;
   struct hwloc_internal_location_s loc;
 
   /* starting with Linux 5.10, Generic Initiators may be preferred to CPU initiators.
@@ -3594,25 +3594,29 @@ read_node_local_memattrs(struct hwloc_topology *topology,
 
   /* bandwidth in MiB/s and latency in ns, just like in our memattrs API */
 
-  /* only read bandwidth/latency for now */
   sprintf(accesspath, "%s/read_bandwidth", accessdirpath);
   if (hwloc_read_path_as_uint(accesspath, &rbw, data->root_fd) == 0 && rbw > 0) {
-    hwloc_internal_memattr_set_value(topology, HWLOC_MEMATTR_ID_BANDWIDTH, HWLOC_OBJ_NUMANODE, (hwloc_uint64_t)-1, node->os_index, &loc, rbw);
+    hwloc_internal_memattr_set_value(topology, HWLOC_MEMATTR_ID_READ_BANDWIDTH, HWLOC_OBJ_NUMANODE, (hwloc_uint64_t)-1, node->os_index, &loc, rbw);
   }
+  sprintf(accesspath, "%s/write_bandwidth", accessdirpath);
+  if (hwloc_read_path_as_uint(accesspath, &wbw, data->root_fd) == 0 && wbw > 0) {
+    hwloc_internal_memattr_set_value(topology, HWLOC_MEMATTR_ID_WRITE_BANDWIDTH, HWLOC_OBJ_NUMANODE, (hwloc_uint64_t)-1, node->os_index, &loc, wbw);
+  }
+  /* main BW is average if both are known, or just read if known, or just write */
+  if (rbw > 0 && wbw > 0)
+    hwloc_internal_memattr_set_value(topology, HWLOC_MEMATTR_ID_BANDWIDTH, HWLOC_OBJ_NUMANODE, (hwloc_uint64_t)-1, node->os_index, &loc, (rbw+wbw)/2);
 
   sprintf(accesspath, "%s/read_latency", accessdirpath);
   if (hwloc_read_path_as_uint(accesspath, &rlat, data->root_fd) == 0 && rlat > 0) {
-    hwloc_internal_memattr_set_value(topology, HWLOC_MEMATTR_ID_LATENCY, HWLOC_OBJ_NUMANODE, (hwloc_uint64_t)-1, node->os_index, &loc, rlat);
-  }
-
-#if 0
-  sprintf(accesspath, "%s/write_bandwidth", accessdirpath);
-  if (hwloc_read_path_as_uint(accesspath, &wbw, data->root_fd) == 0 && wbw > 0) {
+    hwloc_internal_memattr_set_value(topology, HWLOC_MEMATTR_ID_READ_LATENCY, HWLOC_OBJ_NUMANODE, (hwloc_uint64_t)-1, node->os_index, &loc, rlat);
   }
   sprintf(accesspath, "%s/write_latency", accessdirpath);
   if (hwloc_read_path_as_uint(accesspath, &wlat, data->root_fd) == 0 && wlat > 0) {
+    hwloc_internal_memattr_set_value(topology, HWLOC_MEMATTR_ID_WRITE_LATENCY, HWLOC_OBJ_NUMANODE, (hwloc_uint64_t)-1, node->os_index, &loc, wlat);
   }
-#endif
+  /* main latency is average if both are known, or just read if known, or just write */
+  if (rlat > 0 && wlat > 0)
+    hwloc_internal_memattr_set_value(topology, HWLOC_MEMATTR_ID_LATENCY, HWLOC_OBJ_NUMANODE, (hwloc_uint64_t)-1, node->os_index, &loc, (rlat+wlat)/2);
 
   return 0;
 }
