@@ -55,4 +55,32 @@ Memory attribute #3 name `Latency' flags 6
   NUMANode L#3 = 26 from cpuset 0x0000000c (Group0 L#2)
   NUMANode L#4 = 26 from cpuset 0x000000c0 (Group0 L#3)
   NUMANode L#5 = 77 from cpuset 0x000000cc (Package L#1)
+Memory attribute #4 name `ReadBandwidth' flags 5
+  NUMANode L#0 = 131072 from cpuset 0x00000003 (Group0 L#0)
+  NUMANode L#1 = 131072 from cpuset 0x00000030 (Group0 L#1)
+  NUMANode L#2 = 78644 from cpuset 0x00000033 (Package L#0)
+  NUMANode L#3 = 131072 from cpuset 0x0000000c (Group0 L#2)
+  NUMANode L#4 = 131072 from cpuset 0x000000c0 (Group0 L#3)
+  NUMANode L#5 = 78644 from cpuset 0x000000cc (Package L#1)
+Memory attribute #5 name `WriteBandwidth' flags 5
+  NUMANode L#0 = 131072 from cpuset 0x00000003 (Group0 L#0)
+  NUMANode L#1 = 131072 from cpuset 0x00000030 (Group0 L#1)
+  NUMANode L#2 = 78644 from cpuset 0x00000033 (Package L#0)
+  NUMANode L#3 = 131072 from cpuset 0x0000000c (Group0 L#2)
+  NUMANode L#4 = 131072 from cpuset 0x000000c0 (Group0 L#3)
+  NUMANode L#5 = 78644 from cpuset 0x000000cc (Package L#1)
+Memory attribute #6 name `ReadLatency' flags 6
+  NUMANode L#0 = 26 from cpuset 0x00000003 (Group0 L#0)
+  NUMANode L#1 = 26 from cpuset 0x00000030 (Group0 L#1)
+  NUMANode L#2 = 77 from cpuset 0x00000033 (Package L#0)
+  NUMANode L#3 = 26 from cpuset 0x0000000c (Group0 L#2)
+  NUMANode L#4 = 26 from cpuset 0x000000c0 (Group0 L#3)
+  NUMANode L#5 = 77 from cpuset 0x000000cc (Package L#1)
+Memory attribute #7 name `WriteLatency' flags 6
+  NUMANode L#0 = 26 from cpuset 0x00000003 (Group0 L#0)
+  NUMANode L#1 = 26 from cpuset 0x00000030 (Group0 L#1)
+  NUMANode L#2 = 77 from cpuset 0x00000033 (Package L#0)
+  NUMANode L#3 = 26 from cpuset 0x0000000c (Group0 L#2)
+  NUMANode L#4 = 26 from cpuset 0x000000c0 (Group0 L#3)
+  NUMANode L#5 = 77 from cpuset 0x000000cc (Package L#1)
 Topology not from this system
