@@ -22,7 +22,8 @@ Version 2.8.0
 * API
   + Add HWLOC_TOPOLOGY_FLAG_NO_DISTANCES, _NO_MEMATTRS and _NO_CPUKINDS
     to reduce the overhead when unneeded.
-  + Add separate Read/Write Bandwidth/Latency memory attributes.
+  + Add separate Read/Write Bandwidth/Latency memory attributes and
+    implement them on Linux.
 * Backends
   + Detect heterogeneous caches in hybrid CPUs on MacOS X,
     thanks to Paul Bone for the help.
